--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,8 @@ collections:
 
 # Build settings
 markdown: kramdown
+
+# Clara version and documentation location.
+clara_version: 0.9.0
+javadoc: /apidocs/0.9.0/java/
+clojuredoc: /apidocs/0.9.0/clojure/
